{
  "version": 4, 
  "terraform_version": "0.12.10",
  "serial": 16,
  "lineage": "17be0d76-d37a-e826-6dc4-b38e8c05c992",
  "resources": [
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0908f85c3e592837c",
            "arn": "arn:aws:ec2:us-east-1:037837762332:instance/i-0882d5fbead1d3c13",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdg",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-063eccb4c4168a830",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0882d5fbead1d3c13",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-010a4c8a32b672a4c",
            "private_dns": "ip-172-31-4-184.ec2.internal",
            "private_ip": "172.31.4.184",
            "public_dns": "ec2-3-231-157-235.compute-1.amazonaws.com",
            "public_ip": "3.231.157.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-032a050bb2bc0de3b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-10cef377",
            "tags": {
              "Name": "MyEC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-c37fdd93"
            ]
          }
        }
      ]
    },
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:037837762332:security-group/sg-0602a8a4e8eca669a",
            "description": "Security Group to host web application",
            "egress": [],
            "id": "sg-0602a8a4e8eca669a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "application",
            "name_prefix": null,
            "owner_id": "037837762332",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-094150d1cb06f4e2f"
          }
        }
      ]
    },
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:037837762332:security-group/sg-045fea9f4f8e453ab",
            "description": "Security Group for database",
            "egress": [],
            "id": "sg-045fea9f4f8e453ab",
            "ingress": [],
            "name": "database",
            "name_prefix": null,
            "owner_id": "037837762332",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-094150d1cb06f4e2f"
          }
        }
      ]
    },
    {
      "module": "module.module1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "database_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3332821632",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-045fea9f4f8e453ab",
            "self": false,
            "source_security_group_id": "sg-0602a8a4e8eca669a",
            "to_port": 3306,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.application",
            "aws_security_group.database"
          ]
        }
      ]
    }
  ]
}